[gd_scene load_steps=3 format=3 uid="uid://bgac4qkncf57l"]

[ext_resource type="Script" uid="uid://iam43jnqqvja" path="res://scenes/game/cards/Card.gd" id="1_n7pkt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hael8"]
size = Vector2(116, 177)

[node name="Card" type="Node2D"]
script = ExtResource("1_n7pkt")

[node name="CardImage" type="Sprite2D" parent="."]
region_rect = Rect2(351, 38, 115, 177)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_hael8")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
